fix for overflow-x

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -132,6 +132,7 @@ input {
 body {
   color: #ffffff;
   font-family: Helvetica, Arial, "Lucida Grande", sans-serif;
+  overflow-x: hidden;
 
   .box-shadow {
     -webkit-box-shadow: 0px 13px 30px -8px rgba(0,0,0,0.1);
